# edopro-deskbot

./: .clang-tidy  .gitignore  .gitmodules  meson.build
src/: client.cpp  client.hpp  common_msg.hpp  ctosmsg.hpp  encode_context.cpp  encode_context.hpp  load_script.cpp  load_script.hpp  main.cpp  parse_ydk.hpp  stocmsg.hpp
